--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bytemuck="1"
+bytemuck="1.13.1"
 ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
 beryllium = "0.2.0-alpha.4"
 imagine = "0.0.5"
 
+
 #![feature(core_intrinsics)]
+#![feature(default_free_fn)]
