--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ bytemuck="1.13.1"
 ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
 beryllium = "0.2.0-alpha.4"
 imagine = "0.0.5"
+cgmath="0.18.0"
+cstr="0.2.11"
 
 
 #![feature(core_intrinsics)]
