--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,9 @@ bytemuck="1.13.1"
 ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}
 
 beryllium = "0.2.0-alpha.4"
-imagine = "0.4.0"
 cgmath="0.18.0"
 cstr="0.2.11"
 tobj="3.2.4"
 colored = "2"
-radiant = "0.2"
-
-#![feature(core_intrinsics)]
-#![feature(default_free_fn)]
+image = "0.24.6"
+stb_image = "0.2.5"
